--- a/pages/proyecto.html
+++ b/pages/proyecto.html
@@ -110,11 +110,16 @@
     </main>
 
     <footer>
-        <p>Nos esforzamos por proporcionar contenido informativo y perspicaz que invite a la reflexión y el aprendizaje. Si tienes alguna pregunta, sugerencia o simplemente deseas compartir tus pensamientos, no dudes en ponerte en contacto con nosotros a través de nuestros canales de comunicación.</p>
+        <p>Nos esforzamos por proporcionar contenido informativo y perspicaz que invite a la reflexión y el aprendizaje.
+            Si tienes alguna pregunta, sugerencia o simplemente deseas compartir tus pensamientos, no dudes en ponerte
+            en contacto con nosotros a través de nuestros canales de comunicación.</p>
         <a href=""><img src="../img/whatsapp.png" alt="WhatsApp"></a>
         <a href=""><img src="../img/instagram.png" alt="Instagram"></a>
         <a href=""><img src="../img/x.png" alt="X"></a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
