--- a/pages/proyecto.html
+++ b/pages/proyecto.html
@@ -43,69 +43,116 @@
 
     <main>
         <section class="sec1Proyecto">
-            <div>
-                <h2>Explorando el Mundo de los Cazadores-Recolectores: Un Viaje Antropológico</h2>
-                <p>Bienvenidos a un fascinante viaje a través del tiempo y el espacio, donde nos sumergimos en el mundo
-                    de las tribus de cazadores-recolectores. Nuestro proyecto de antropología se inspira en el profundo
-                    estudio llevado a cabo por los renombrados antropólogo David Graeber y el arqueólogo David Wengrow.
-                    Juntos, han desenterrado los misterios y maravillas de las sociedades ancestrales, revelando sus
-                    estilos de vida, costumbres y estructuras sociales.
+            <div class="card text-center">
+                <div class="card-header">
+                    Sobre el proyecto
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Explorando el Mundo de los Cazadores-Recolectores: Un Viaje Antropológico
+                    </h5>
+                    <p class="card-text">Bienvenidos a un fascinante viaje a través del tiempo y el espacio, donde nos
+                        sumergimos en el mundo
+                        de las tribus de cazadores-recolectores. Nuestro proyecto de antropología se inspira en el
+                        profundo
+                        estudio llevado a cabo por los renombrados antropólogo David Graeber y el arqueólogo David
+                        Wengrow.
+                        Juntos, han desenterrado los misterios y maravillas de las sociedades ancestrales, revelando sus
+                        estilos de vida, costumbres y estructuras sociales.
 
-                    En este viaje, nos adentraremos en las vastas llanuras, densos bosques y exuberantes selvas donde
-                    estas tribus una vez prosperaron. Nos sumergiremos en la intimidad de sus comunidades, observando
-                    cómo se organizaban, interactuaban y compartían conocimientos. Desde las complejas redes de
-                    parentesco hasta las formas de gobierno igualitarias, exploraremos las diversas formas en que estas
-                    sociedades enfrentaron los desafíos de la supervivencia y la coexistencia en armonía con la
-                    naturaleza.
+                        En este viaje, nos adentraremos en las vastas llanuras, densos bosques y exuberantes selvas
+                        donde
+                        estas tribus una vez prosperaron. Nos sumergiremos en la intimidad de sus comunidades,
+                        observando
+                        cómo se organizaban, interactuaban y compartían conocimientos. Desde las complejas redes de
+                        parentesco hasta las formas de gobierno igualitarias, exploraremos las diversas formas en que
+                        estas
+                        sociedades enfrentaron los desafíos de la supervivencia y la coexistencia en armonía con la
+                        naturaleza.
 
-                    A través de relatos detallados, análisis rigurosos y evidencia arqueológica, nuestro proyecto busca
-                    iluminar las verdades profundas y a menudo malentendidas sobre la vida de los
-                    cazadores-recolectores. Desafiamos las narrativas simplistas y estereotipadas, y en su lugar,
-                    celebramos la riqueza y la diversidad de las culturas que han moldeado nuestro pasado y continúan
-                    inspirando nuestro presente.
+                        A través de relatos detallados, análisis rigurosos y evidencia arqueológica, nuestro proyecto
+                        busca
+                        iluminar las verdades profundas y a menudo malentendidas sobre la vida de los
+                        cazadores-recolectores. Desafiamos las narrativas simplistas y estereotipadas, y en su lugar,
+                        celebramos la riqueza y la diversidad de las culturas que han moldeado nuestro pasado y
+                        continúan
+                        inspirando nuestro presente.
 
-                    Únete a nosotros en esta emocionante aventura mientras desentrañamos los misterios del pasado para
-                    comprender mejor nuestro mundo contemporáneo y forjar un futuro más inclusivo y sostenible para
-                    todos.</p>
+                        Únete a nosotros en esta emocionante aventura mientras desentrañamos los misterios del pasado
+                        para
+                        comprender mejor nuestro mundo contemporáneo y forjar un futuro más inclusivo y sostenible para
+                        todos.</p>
+                </div>
             </div>
-            <div>
-                <h2>Punto de partida</h2>
-                <p>David Graeber y David Wengrow, dos destacados académicos en los campos de la antropología y la
-                    arqueología, se embarcaron en una investigación sin precedentes con un objetivo claro: desentrañar
-                    los orígenes y la evolución de las sociedades humanas. Su viaje comenzó con una pregunta
-                    fundamental: ¿cómo vivían y se organizaban las primeras comunidades humanas antes del surgimiento de
-                    la agricultura y la civilización tal como la conocemos?
+            <div class="card text-center">
+                <div class="card-header">
+                    Punto de partida
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Explorando el Mundo de los Cazadores-Recolectores: Un Viaje Antropológico
+                    </h5>
+                    <p class="card-text">David Graeber y David Wengrow, dos destacados académicos en los campos de la
+                        antropología y la
+                        arqueología, se embarcaron en una investigación sin precedentes con un objetivo claro:
+                        desentrañar
+                        los orígenes y la evolución de las sociedades humanas. Su viaje comenzó con una pregunta
+                        fundamental: ¿cómo vivían y se organizaban las primeras comunidades humanas antes del
+                        surgimiento de
+                        la agricultura y la civilización tal como la conocemos?
 
-                    El punto de partida de su investigación se remonta a las sociedades de cazadores-recolectores,
-                    consideradas por mucho tiempo como simples y primitivas en comparación con las civilizaciones
-                    posteriores. Sin embargo, Graeber y Wengrow desafiaron esta noción convencional y se propusieron
-                    explorar las complejidades y sofisticaciones de estas antiguas formas de vida.
+                        El punto de partida de su investigación se remonta a las sociedades de cazadores-recolectores,
+                        consideradas por mucho tiempo como simples y primitivas en comparación con las civilizaciones
+                        posteriores. Sin embargo, Graeber y Wengrow desafiaron esta noción convencional y se propusieron
+                        explorar las complejidades y sofisticaciones de estas antiguas formas de vida.
 
-                    Su investigación los llevó a examinar una amplia gama de evidencia, desde los relatos etnográficos
-                    de las culturas indígenas contemporáneas hasta los hallazgos arqueológicos de antiguos
-                    asentamientos. A través de este meticuloso análisis interdisciplinario, comenzaron a reconstruir el
-                    tapiz de la historia humana, revelando las intrincadas estructuras sociales, sistemas económicos y
-                    dinámicas culturales que caracterizaban a estas sociedades.
+                        Su investigación los llevó a examinar una amplia gama de evidencia, desde los relatos
+                        etnográficos
+                        de las culturas indígenas contemporáneas hasta los hallazgos arqueológicos de antiguos
+                        asentamientos. A través de este meticuloso análisis interdisciplinario, comenzaron a reconstruir
+                        el
+                        tapiz de la historia humana, revelando las intrincadas estructuras sociales, sistemas económicos
+                        y
+                        dinámicas culturales que caracterizaban a estas sociedades.
 
-                    Lo que descubrieron fue asombroso: en lugar de ser simples bandas dispersas de cazadores y
-                    recolectores, las comunidades prehistóricas exhibían una notable diversidad y sofisticación. Desde
-                    sistemas de intercambio sofisticados hasta complejas formas de gobierno y ritual, estas sociedades
-                    desafiaban las concepciones tradicionales de la "simplicidad" de la vida prehistórica.
+                        Lo que descubrieron fue asombroso: en lugar de ser simples bandas dispersas de cazadores y
+                        recolectores, las comunidades prehistóricas exhibían una notable diversidad y sofisticación.
+                        Desde
+                        sistemas de intercambio sofisticados hasta complejas formas de gobierno y ritual, estas
+                        sociedades
+                        desafiaban las concepciones tradicionales de la "simplicidad" de la vida prehistórica.
 
-                    Este punto de partida desafiante marcó el comienzo de un viaje intelectual que no solo redefiniría
-                    nuestra comprensión de las sociedades antiguas, sino que también tendría profundas implicaciones
-                    para nuestra comprensión de la condición humana y el potencial de la organización social.</p>
+                        Este punto de partida desafiante marcó el comienzo de un viaje intelectual que no solo
+                        redefiniría
+                        nuestra comprensión de las sociedades antiguas, sino que también tendría profundas implicaciones
+                        para nuestra comprensión de la condición humana y el potencial de la organización social.</p>
+                </div>
             </div>
+
+            <!--                MULTIMEDIA                    -->
+
             <h2>Material multimedia relacionado</h2>
-            <iframe width="1180" height="638" src="https://www.youtube.com/embed/MDZkKBYKQgY"
-                title="Rare languages. Wyandot language" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-            <iframe width="1134" height="638" src="https://www.youtube.com/embed/MoLIagOu0po"
-                title="¿Siempre EXISTIÓ la DESIGUALDAD? | The Dawn of Everything | David Graeber y David Wengrow"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card1">
+                <iframe width="1134" height="638" src="https://www.youtube.com/embed/XAr8iR7F-9Y"
+                    title="IROQUOIAN LANGUAGES" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="card1-body">
+                    <p class="card1-text">En éste video se exploran las distintas lenguas Iroquesas que se hablaban
+                        dentro de las distintas comunidades indígenas de América del Norte, su procedencia y la
+                        distribución geográfica de las mismas</p>
+                </div>
+            </div>
+            <div class="card1">
+                <iframe width="1134" height="638" src="https://www.youtube.com/embed/MoLIagOu0po"
+                    title="¿Siempre EXISTIÓ la DESIGUALDAD? | The Dawn of Everything | David Graeber y David Wengrow"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="card1-body">
+                    <p class="card1-text">Un resumen y analisis de la obra publicada por David Graeber y David Wengrow
+                    </p>
+                </div>
+            </div>
+
         </section>
     </main>
 
@@ -113,13 +160,15 @@
         <p>Nos esforzamos por proporcionar contenido informativo y perspicaz que invite a la reflexión y el aprendizaje.
             Si tienes alguna pregunta, sugerencia o simplemente deseas compartir tus pensamientos, no dudes en ponerte
             en contacto con nosotros a través de nuestros canales de comunicación.</p>
-        <a href=""><img src="../img/whatsapp.png" alt="WhatsApp"></a>
-        <a href=""><img src="../img/instagram.png" alt="Instagram"></a>
-        <a href=""><img src="../img/x.png" alt="X"></a>
+        <div>
+            <a href=""><img src="../img/whatsapp.png" alt="WhatsApp"></a>
+            <a href=""><img src="../img/instagram.png" alt="Instagram"></a>
+            <a href=""><img src="../img/x.png" alt="X"></a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
