--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="./css/estilos.css">
-    <title>AntropoDavids</title>
+    <title>AntropoDavids // Antropología basada en tribus</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Descubre el mundo de la antropología con análisis detallados, investigaciones recientes y perspectivas únicas sobre culturas, sociedades y la evolución humana. Encuentra contenido atractivo y accesible para entender mejor la diversidad humana y las prácticas culturales.">
+    <meta name="keywords" content="Antropología, Divulgación, Tribus, Cultura, Costumbres, Sociedades">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html"><img
-                        src="./img/Captura de pantalla 2024-03-14 205809 copia.png" alt=""></a>
+                        src="./img/Captura de pantalla 2024-03-14 205809 copia.png" alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -63,7 +65,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/huron.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/huron.jpg" class="d-block w-100" alt="Tribu de los Hurones">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Wyandot</h5>
                             <p>Los Wyandot, también conocidos como los Wendat, eran una tribu nativa americana que
@@ -79,7 +81,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/inuit.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/inuit.jpg" class="d-block w-100" alt="Tribu de los Inuit">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Inuit</h5>
                             <p>Los Inuit son un pueblo indígena que habita en las regiones árticas de América del Norte,
@@ -93,7 +95,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/nambikwara.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/nambikwara.jpg" class="d-block w-100" alt="Tribu de los Nambikwara">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Nambikuara</h5>
                             <p>Los Nambikuara son un grupo indígena que habita en la región del Amazonas en Brasil.
@@ -107,7 +109,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/montagnais.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/montagnais.jpg" class="d-block w-100" alt="Tribu de los Montagnais-Naskapi">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Montagnais-Naskapi</h5>
                             <p>Los Montagnais-Naskapi son dos grupos indígenas relacionados que habitan en las regiones
@@ -147,46 +149,46 @@
             <section class="barra-grid">
                 <div class="im1">
                     <h3>San</h3>
-                    <img src="./img/san.jpg" alt="">
+                    <img src="./img/san.jpg" alt="Tribu San">
                     <p>También conocidos como los bosquimanos, los San son uno de los grupos étnicos más antiguos de
                         África, que han practicado la caza y la recolección durante miles de años en la región del sur
                         de África.</p>
                 </div>
                 <div class="im2">
                     <h3>Aborígenes australianos</h3>
-                    <img src="./img/aborigenAustra.jpg" alt="">
+                    <img src="./img/aborigenAustra.jpg" alt="Tribu aborigen australiana">
                     <p>Los pueblos aborígenes de Australia han practicado la caza y la recolección durante más de 50,000
                         años, convirtiéndolos en una de las culturas continuas más antiguas del mundo.</p>
                 </div>
                 <div class="im3">
                     <h3>Inuit</h3>
-                    <img src="./img/Inuit2.jpg" alt="">
+                    <img src="./img/Inuit2.jpg" alt="Tribu Inuit">
                     <p>También conocidos como esquimales, los Inuit son un grupo indígena que ha vivido en las regiones
                         árticas de América del Norte durante miles de años, dependiendo de la caza de animales y la
                         recolección de plantas para sobrevivir.</p>
                 </div>
                 <div class="barra">
-                    <p>10.000 a.c</p>
+                    <p class="p1">10.000 a.c</p>
                     <input type="range" id="barra" name="Barra" min="0" max="1000" step="5" value="0" list="tickmarks">
-                    <p> 2000 d.c</p>
+                    <p class="p2"> 2000 d.c</p>
                 </div>
                 <div class="im4">
                     <h3>Pueblos Nativos Americanos</h3>
-                    <img src="./img/NatAmeri.jpg" alt="">
+                    <img src="./img/NatAmeri.jpg" alt="Tribu nativo americana">
                     <p>Antes de la llegada de los europeos, numerosas tribus indígenas en América del Norte practicaban
                         la caza y la recolección como parte de su modo de vida, incluyendo tribus como los navajos, los
                         sioux, los cheroquis, entre otros.</p>
                 </div>
                 <div class="im5">
                     <h3>Tribus de la Amazonia</h3>
-                    <img src="./img/amazonas.jpg" alt="">
+                    <img src="./img/amazonas.jpg" alt="Tribu amazonica">
                     <p>Numerosas tribus indígenas en la región amazónica de América del Sur, como los Yanomami, los
                         Matsés y los Kayapó, han practicado la caza y la recolección durante miles de años, dependiendo
                         de los recursos naturales de la selva tropical para su subsistencia.</p>
                 </div>
                 <div class="im6">
                     <h3>Tribus del Kalahari</h3>
-                    <img src="./img/kalahari.jpg" alt="">
+                    <img src="./img/kalahari.jpg" alt="Tribu Kalahari">
                     <p>Además de los San (bosquimanos), varias otras tribus han habitado el desierto del Kalahari en el
                         sur de África, como los Khoikhoi y los Nama, que históricamente han practicado la caza y la
                         recolección en esta región árida.</p>
