--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>AntropoDavids / Contactos</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Descubre el mundo de la antropología con análisis detallados, investigaciones recientes y perspectivas únicas sobre culturas, sociedades y la evolución humana. Encuentra contenido atractivo y accesible para entender mejor la diversidad humana y las prácticas culturales.">
+    <meta name="keywords" content="Antropología, Divulgación, Tribus, Cultura, Costumbres, Sociedades">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../img/Captura de pantalla 2024-03-14 205809 copia.png" alt=""></a>
+                <a class="navbar-brand" href="../index.html"><img
+                        src="../img/Captura de pantalla 2024-03-14 205809 copia.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -38,28 +45,84 @@
     </header>
 
     <main>
-        <section>
+        <section class="preguntasFrecuentes">
+            <p>
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                    Toggle width collapse
+                </button>
+            </p>
+            <div style="min-height: 120px;">
+                <div class="collapse collapse-horizontal" id="collapseWidthExample">
+                    <div class="card card-body" style="width: 300px;">
+                        This is some placeholder content for a horizontal collapse. It's hidden by default and shown
+                        when triggered.
+                    </div>
+                </div>
+            </div>
+
+            <p>
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                  Toggle width collapse
+                </button>
+              </p>
+              <div style="min-height: 120px;">
+                <div class="collapse collapse-horizontal" id="collapseWidthExample">
+                  <div class="card card-body" style="width: 300px;">
+                    This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
+                  </div>
+                </div>
+              </div>
+
+              <p>
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                  Toggle width collapse
+                </button>
+              </p>
+              <div style="min-height: 120px;">
+                <div class="collapse collapse-horizontal" id="collapseWidthExample">
+                  <div class="card card-body" style="width: 300px;">
+                    This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
+                  </div>
+                </div>
+              </div>
+
+              <p>
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                  Toggle width collapse
+                </button>
+              </p>
+              <div style="min-height: 120px;">
+                <div class="collapse collapse-horizontal" id="collapseWidthExample">
+                  <div class="card card-body" style="width: 300px;">
+                    This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
+                  </div>
+                </div>
+              </div>
+
+        </section>
+        <section class="infoUsuario">
             <form action="">
                 <div>
-                <Label for="Nombre">Nombre:</Label>
-                <input type="text" name="nombre" id="nombre">
+                    <Label for="Nombre">Nombre:</Label>
+                    <input type="text" name="nombre" id="nombre">
                 </div>
                 <div>
-                <label for="Apellidos">Apellidos:</label>
-                <input type="text" name="apellidos" id="apellidos">
+                    <label for="Apellidos">Apellidos:</label>
+                    <input type="text" name="apellidos" id="apellidos">
                 </div>
                 <div>
-                <label for="email">E-mail:</label>    
-                <input type="email" name="email" id="email">
+                    <label for="email">E-mail:</label>
+                    <input type="email" name="email" id="email">
                 </div>
                 <div>
-                <label for="Telefono">Telefono:</label>
-                <input type="number" name="telefono" id="telefono">
+                    <label for="Telefono">Telefono:</label>
+                    <input type="number" name="telefono" id="telefono">
                 </div>
             </form>
         </section>
     </main>
-    
+
     <footer>
         <p>Nos esforzamos por proporcionar contenido informativo y perspicaz que invite a la reflexión y el aprendizaje.
             Si tienes alguna pregunta, sugerencia o simplemente deseas compartir tus pensamientos, no dudes en ponerte
@@ -71,7 +134,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
