--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>AntropoDavids / Mapa</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Descubre el mundo de la antropología con análisis detallados, investigaciones recientes y perspectivas únicas sobre culturas, sociedades y la evolución humana. Encuentra contenido atractivo y accesible para entender mejor la diversidad humana y las prácticas culturales.">
+    <meta name="keywords" content="Antropología, Divulgación, Tribus, Cultura, Costumbres, Sociedades">
 </head>
 <body>
     <header>
@@ -38,9 +41,24 @@
     </header>
 
     <main>
-        <section>
+        <section class="mapa">
         <!--Mapa-->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d59718366.74324401!2d5.702594594557697!3d23.998607405123188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2suy!4v1710260499455!5m2!1ses!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <h2>Las tribus cazadoras-recolectoras en el mundo</h2>
+        <div>
+            <img src="../img/mapamundi.jpg" alt="">
+
+            <button type="button" class="btn btn-lg btn-secondary" data-bs-toggle="popover" data-bs-placement="right" data-bs-title="Wyandot" data-bs-content="
+            La tribu de los wyandot, también conocida como hurones, vivía originalmente en la región de los Grandes Lagos, específicamente en la península sur de Ontario, Canadá, y partes del noreste de los Estados Unidos. Esta zona es conocida por sus extensos bosques, ríos, y lagos, ofreciendo abundantes recursos naturales para la caza, la pesca, y la agricultura." id="btn1">1</button>
+
+            <button type="button" class="btn btn-lg btn-secondary" data-bs-toggle="popover" data-bs-placement="right" data-bs-title="Nambikuara" data-bs-content="
+            La tribu de los nambikuara vivía en la región occidental de Brasil, principalmente en el estado de Mato Grosso. Esta zona se caracteriza por sus llanuras y selvas tropicales, y está situada en el ecosistema de la Amazonia y el Cerrado. Los nambikuara utilizaban estos diversos hábitats para obtener alimentos, cazando, pescando y recolectando frutos, además de practicar una agricultura de subsistencia." id="btn2">2</button>
+
+            <button type="button" class="btn btn-lg btn-secondary" data-bs-toggle="popover" data-bs-placement="right" data-bs-title="Inuit" data-bs-content="
+            Los inuit vivían en la región ártica, que abarca las zonas costeras del norte de América, Groenlandia y partes de Siberia. Esta zona se caracteriza por su clima frío extremo, con vastas extensiones de tundra, hielo marino y montañas nevadas. Los inuit dependían de la caza de animales marinos, como focas y ballenas, así como de la pesca y la caza terrestre para obtener su sustento." id="btn3">3</button>
+
+            <button type="button" class="btn btn-lg btn-secondary" data-bs-toggle="popover" data-bs-placement="right" data-bs-title="Aborígenes Australianos" data-bs-content="
+            Los aborígenes australianos vivían en todo el continente australiano, desde las zonas costeras hasta los desiertos interiores. Australia tiene una gran variedad de paisajes y ecosistemas, como selvas tropicales, sabanas, desiertos y regiones montañosas. Los aborígenes adaptaron su estilo de vida a cada entorno, cazando y recolectando alimentos nativos, como animales, frutas y plantas silvestres." id="btn4">4</button>
+        </div>
         </section>
     </main>
 
