--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -46,78 +46,103 @@
 
     <main>
         <section class="preguntasFrecuentes">
+
+          <h2>Preguntas Frecuentes</h2>
+
             <p>
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-                    Toggle width collapse
+                    ¿Quiénes son los autores de los artículos?
                 </button>
             </p>
             <div style="min-height: 120px;">
                 <div class="collapse collapse-horizontal" id="collapseWidthExample">
-                    <div class="card card-body" style="width: 300px;">
-                        This is some placeholder content for a horizontal collapse. It's hidden by default and shown
-                        when triggered.
+                    <div class="card card-body">
+                      Los artículos en este sitio web son escritos por un equipo de expertos en antropología y arqueología liderado por David Graeber y David Wengrow. David Graeber es un reconocido antropólogo con amplia experiencia en el estudio de sociedades no jerárquicas y culturas indígenas. Por su parte, David Wengrow es un arqueólogo especializado en los orígenes de la civilización, con particular énfasis en los pueblos de Oriente Próximo y África.
+
+                      Juntos, Graeber y Wengrow aportan su profundo conocimiento y experiencia para ofrecer contenido riguroso y bien fundamentado sobre tribus de cazadores-recolectores. Además de su trabajo académico, su enfoque interdisciplinario y crítico les permite abordar temas complejos desde múltiples perspectivas, proporcionando una visión rica y matizada sobre las culturas que estudian.
                     </div>
                 </div>
             </div>
 
             <p>
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-                  Toggle width collapse
+                  ¿Dónde puedo encontrar las últimas investigaciones en antropología?
                 </button>
               </p>
               <div style="min-height: 120px;">
                 <div class="collapse collapse-horizontal" id="collapseWidthExample">
-                  <div class="card card-body" style="width: 300px;">
-                    This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
+                  <div class="card card-body">
+                    1- Revistas Académicas: Existen numerosas revistas académicas especializadas en antropología, como American Anthropologist, Journal of Anthropological Research y Current Anthropology. Estas publicaciones ofrecen artículos revisados por pares que cubren una variedad de temas en el campo.
+                    2- Conferencias y Simposios: Participar en conferencias y simposios de antropología es una excelente manera de mantenerse al tanto de los últimos avances en la disciplina. Los académicos suelen presentar investigaciones recientes en estos eventos.
+                    3-Universidades e Institutos de Investigación: Muchas universidades y centros de investigación publican estudios e informes de antropología en sus sitios web. Revisa las páginas de departamentos académicos para acceder a trabajos recientes de investigadores.
+                    4-Bases de Datos Académicas: Plataformas como JSTOR, PubMed, Google Scholar y ResearchGate ofrecen acceso a una gran cantidad de artículos académicos en antropología y otros campos relacionados. Puedes buscar investigaciones específicas por autor, tema o fecha.
+                    5-Asociaciones y Sociedades: Las asociaciones profesionales, como la Asociación Americana de Antropología (AAA), suelen compartir recursos y actualizaciones sobre investigaciones recientes entre sus miembros y en sus sitios web.
                   </div>
                 </div>
               </div>
 
               <p>
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-                  Toggle width collapse
+                  ¿Cómo se seleccionan las tribus para su estudio?
                 </button>
               </p>
               <div style="min-height: 120px;">
                 <div class="collapse collapse-horizontal" id="collapseWidthExample">
-                  <div class="card card-body" style="width: 300px;">
-                    This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
-                  </div>
+                  <div class="card card-body">
+                    La selección de tribus para su estudio se realiza siguiendo un proceso cuidadoso y bien definido para garantizar una cobertura equilibrada y respetuosa. Estos son algunos de los factores que se tienen en cuenta al elegir las tribus para su estudio:
+
+                    Representatividad Geográfica: Se busca incluir tribus de diferentes regiones del mundo para proporcionar una visión global y diversa de las culturas de cazadores-recolectores.
+                    Relevancia Cultural e Histórica: Las tribus que tienen un papel importante en la historia y la cultura de sus regiones son seleccionadas para ofrecer a los lectores información valiosa y significativa.
+                    Estado de Conservación: Se presta atención a las tribus que todavía mantienen gran parte de sus tradiciones culturales y formas de vida ancestrales, ya que esto puede proporcionar información única sobre las prácticas de cazadores-recolectores.
+                    Investigaciones Actuales: Las tribus que son objeto de investigaciones recientes o de actualidad pueden ser seleccionadas para mantener a los lectores informados sobre los avances y descubrimientos más recientes en el campo.                  </div>
                 </div>
               </div>
 
               <p>
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-                  Toggle width collapse
+                  ¿Cómo se asegura la precisión de la información en este sitio web?
                 </button>
               </p>
               <div style="min-height: 120px;">
                 <div class="collapse collapse-horizontal" id="collapseWidthExample">
-                  <div class="card card-body" style="width: 300px;">
-                    This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
+                  <div class="card card-body">
+                    La precisión de la información en este sitio web se asegura mediante:
+
+                    Revisión por expertos: Los artículos son verificados por especialistas en antropología.
+                    Investigación rigurosa: Se utilizan fuentes confiables y actualizadas para los contenidos.
+                    Colaboración con comunidades: Se busca trabajar con las tribus estudiadas para garantizar la exactitud.
+                    Actualización continua: El contenido se actualiza regularmente para reflejar los avances más recientes.
+                    Feedback de lectores: Los lectores pueden reportar errores para su corrección inmediata.
+                    Enfoque ético: Se respetan los derechos y tradiciones de las tribus para una representación precisa.
                   </div>
                 </div>
               </div>
 
         </section>
         <section class="infoUsuario">
+
+          <h3>Si tiene alguna otra duda o queja puede contactarnos mediante un mensaje directo llenando el siguiente formulario:</h3>
             <form action="">
                 <div>
-                    <Label for="Nombre">Nombre:</Label>
-                    <input type="text" name="nombre" id="nombre">
+                    <Label for="Nombre" class="form-label">Nombre:</Label>
+                    <input type="text" name="nombre" id="nombre" class="form-control">
                 </div>
                 <div>
-                    <label for="Apellidos">Apellidos:</label>
-                    <input type="text" name="apellidos" id="apellidos">
+                    <label for="Apellidos" class="form-label">Apellidos:</label>
+                    <input type="text" name="apellidos" id="apellidos" class="form-control">
                 </div>
                 <div>
-                    <label for="email">E-mail:</label>
-                    <input type="email" name="email" id="email">
+                    <label for="E-mail" class="form-label">E-mail:</label>
+                    <input type="email" name="email" id="email" class="form-control">
                 </div>
                 <div>
-                    <label for="Telefono">Telefono:</label>
-                    <input type="number" name="telefono" id="telefono">
+                    <label for="Telefono" class="form-label">Telefono:</label>
+                    <input type="number" name="telefono" id="telefono" class="form-control">
+                </div>
+                <div>
+                  <label for="Mensaje" class="form-label">Mensaje:</label>
+                  <textarea type="text" name="mensaje" id="mensaje" class="form-control" rows="5"></textarea>
                 </div>
             </form>
         </section>
