--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -46,7 +46,7 @@
         <h2>Las tribus cazadoras-recolectoras en el mundo</h2>
         <div>
             <img src="../img/mapamundi.jpg" alt="">
-
+                <!--                            DISCLAIMER:  Estaba pensado para ser un popover pero hay elementos que interfieren y no se muestra bien, busque alguna solucion y son con javascript-->
             <button type="button" class="btn btn-lg btn-secondary" data-bs-toggle="popover" data-bs-placement="right" data-bs-title="Wyandot" data-bs-content="
             La tribu de los wyandot, también conocida como hurones, vivía originalmente en la región de los Grandes Lagos, específicamente en la península sur de Ontario, Canadá, y partes del noreste de los Estados Unidos. Esta zona es conocida por sus extensos bosques, ríos, y lagos, ofreciendo abundantes recursos naturales para la caza, la pesca, y la agricultura." id="btn1">1</button>
 
