--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -43,13 +43,13 @@
             </div>
         </nav>
     </header>
-
+            <!--Barra de titulo y boton de carrito-->
     <main>
         <section>
             <div class="barraTienda">
                 <h2>Tienda de Bibliografía Relacionada</h2>
                 <button type="button" class="btn btn-primary position-relative">
-                    Inbox
+                    Carrito
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                       0
                       <span class="visually-hidden">unread messages</span>
@@ -60,7 +60,7 @@
         <!--                Tarjetas de productos                  -->
         <section class="tienda">
             <div>
-                <div class="card" style="width: 18rem;">
+                <div class="card cardT1" style="width: 18rem;">
                     <img src="../img/thedownofeverything.jpg" class="card-img-top" alt="Libro the dawn of Everything">
                     <div class="card-body">
                         <h5 class="card-title">The Dawn of Everything</h5>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card cardT2" style="width: 18rem;">
                     <img src="../img/homodeus.jpg" class="card-img-top" alt="Libro Homo Deus">
                     <div class="card-body">
                         <h5 class="card-title">Homo Deus</h5>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card cardT3" style="width: 18rem;">
                     <img src="../img/Debt.jpg" class="card-img-top" alt="Libro Debt: The First 5000 Years">
                     <div class="card-body">
                         <h5 class="card-title">Debt: The First 5000 Years</h5>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card cardT4" style="width: 18rem;">
                     <img src="../img/sapiens.png" class="card-img-top" alt="Libro Sapiens">
                     <div class="card-body">
                         <h5 class="card-title">Sapiens</h5>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card cardT5" style="width: 18rem;">
                     <img src="../img/justiciaIndigena.jpg" class="card-img-top" alt="Libro Justicia Indigena">
                     <div class="card-body">
                         <h5 class="card-title">De la "vieja" a la "nueva" justicia indígena</h5>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card cardT6" style="width: 18rem;">
                     <img src="../img/monstruo.jpg" class="card-img-top" alt="Libro La antropología del monstruo en la cultura">
                     <div class="card-body">
                         <h5 class="card-title">Antropología del monstruo en la cultura</h5>
