fin de tercera entrega

--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../img/Captura de pantalla 2024-03-14 205809 copia.png" alt=""></a>
+                <a class="navbar-brand" href="../index.html"><img src="../img/Captura de pantalla 2024-03-14 205809 copia.png" alt="Logo del sitio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
         <!--Mapa-->
         <h2>Las tribus cazadoras-recolectoras en el mundo</h2>
         <div>
-            <img src="../img/mapamundi.jpg" alt="">
+            <img src="../img/mapamundi.jpg" alt="Mapa mundi">
                 <!--                            DISCLAIMER:  Estaba pensado para ser un popover pero hay elementos que interfieren y no se muestra bien, busque alguna solucion y son con javascript-->
             <button type="button" class="btn btn-lg btn-secondary" data-bs-toggle="popover" data-bs-placement="right" data-bs-title="Wyandot" data-bs-content="
             La tribu de los wyandot, también conocida como hurones, vivía originalmente en la región de los Grandes Lagos, específicamente en la península sur de Ontario, Canadá, y partes del noreste de los Estados Unidos. Esta zona es conocida por sus extensos bosques, ríos, y lagos, ofreciendo abundantes recursos naturales para la caza, la pesca, y la agricultura." id="btn1">1</button>
