--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"><img
-                        src="../img/Captura de pantalla 2024-03-14 205809 copia.png" alt=""></a>
+                        src="../img/Captura de pantalla 2024-03-14 205809 copia.png" alt="Logo del sitio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
