--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>AntropoDavids / Contactos</title>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <meta name="description" content="Descubre el mundo de la antropología con análisis detallados, investigaciones recientes y perspectivas únicas sobre culturas, sociedades y la evolución humana. Encuentra contenido atractivo y accesible para entender mejor la diversidad humana y las prácticas culturales.">
@@ -18,9 +22,9 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"><img
-                        src="../img/Captura de pantalla 2024-03-14 205809 copia.png" alt="Logo del sitio"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                  src="../img/Captura de pantalla 2024-03-14 205809 copia.png" alt="Logo del sitio"></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -144,6 +148,7 @@
                   <label for="Mensaje" class="form-label">Mensaje:</label>
                   <textarea type="text" name="mensaje" id="mensaje" class="form-control" rows="5"></textarea>
                 </div>
+                <button type="button" class="btn btn-primary">Enviar</button>
             </form>
         </section>
     </main>
