--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>AntropoDavids / Mapa</title>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <meta name="description" content="Descubre el mundo de la antropología con análisis detallados, investigaciones recientes y perspectivas únicas sobre culturas, sociedades y la evolución humana. Encuentra contenido atractivo y accesible para entender mejor la diversidad humana y las prácticas culturales.">
@@ -42,7 +46,7 @@
 
     <main>
         <section class="mapa">
-        <!--Mapa-->
+        <!--                        Mapa-                -->
         <h2>Las tribus cazadoras-recolectoras en el mundo</h2>
         <div>
             <img src="../img/mapamundi.jpg" alt="Mapa mundi">
